[package]
name = "solana-block-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.35.1"
solana-client = "1.17.12"
log = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
fern = "0.6"
chrono = "0.4.31"
colored = "2.0"
sysinfo = "0.30.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.31"
indicatif = "0.17.7"
mockall = "0.12.1"