[package]
name = "solana-block-cacher"
version = "1.0.0"
license = "MIT"
description = "Solana Block Cacher is a high-performance, command-line interface (CLI) tool built in Rust. It is designed to efficiently pull blocks from the Solana blockchain, respecting the specified rate limits. This tool intelligently measures the user's connection speed and the rate limit to calculate the optimum number of threads for fetching blocks."
homepage = "https://github.com/Jamesmallon1/solana-block-cacher"
repository = "https://github.com/Jamesmallon1/solana-block-cacher"
readme = "README.md"
keywords = ["solana", "blocks", "block", "cache"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
tokio = "1.35.1"
solana-client = "1.17.12"
log = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
fern = "0.6"
chrono = "0.4.31"
colored = "2.0"
sysinfo = "0.30.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.31"
indicatif = "0.17.7"
mockall = "0.12.1"
rand = "0.8.5"
